--- a/javscript/javscript.info/event.delegation/remove-button/index.html
+++ b/javscript/javscript.info/event.delegation/remove-button/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
+    <title></title>
 </head>
 
 <body>
