--- a/javscript/javscript.info/this/chaining/this-chaining.html
+++ b/javscript/javscript.info/this/chaining/this-chaining.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en">
 <script src="https://en.js.cx/test/libs.js"></script>
 <script src="this-chaining.test.js"></script>
 <script>
